# swagger-docker/dist/swagger.json
@@ -171,13 +171,13 @@
           "200" : {
             "description" : "successful operation",
             "schema" : {
-              "$ref" : "#/definitions/DefaultOutputDTO"
+              "$ref" : "#/definitions/StoreOutputDTO"
             }
           },
           "201" : {
             "description" : "Store successfully saved",
             "schema" : {
-              "$ref" : "#/definitions/DefaultOutputDTO"
+              "$ref" : "#/definitions/StoreOutputDTO"
             }
           },
           "403" : {
